--- a/source/0.3a/pom.xml
+++ b/source/0.3a/pom.xml
@@ -82,6 +82,11 @@
       <artifactId>sqlite-jdbc</artifactId>
       <version>3.36.0.3</version>
     </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.27</version>
+    </dependency>
   </dependencies>
 
   <build>
