--- a/source/0.4/pom.xml
+++ b/source/0.4/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>CMSC495</groupId>
   <artifactId>myRxJSP</artifactId>
-  <version>0.3a</version>
+  <version>0.4</version>
   <packaging>war</packaging>
   <name>${project.artifactId.version}</name>
 
